@startuml Packages


package apps {
  package apps.shared.views {
    boundary Menu
  }

 package apps.player.views{
      boundary LaunchView
      boundary LoadView
      boundary MoveView
      boundary ExitView
      boundary SaveGameView
      boundary BoardView

      LaunchView ..> Menu
      LoadView ..> Menu
      MoveView ..> Menu
      ExitView ..> Menu
      SaveGameView ..> Menu
    }

  package app.user.views{
    boundary StartView
    StartView ..> Menu
  }

  package app.aitrainer.views{
    boundary ShowConfigView
    boundary EditConfigView
    boundary SaveConfigView
    ShowConfigView ..> Menu
    EditConfigView ..> Menu
    SaveConfigView ..> Menu
  }
}

package contexts{
  package context.user{
    package checkers.user.controllers{
      control StartController
    }

  }

  package context.aitrainer {
    package checkers.aitrainer.controllers{
      control ShowConfigController
      control EditConfigController
      control SaveConfigController
    }
  }


  package context.player {
    package checkers.player.models{
      entity Checkers
      entity Game
      entity Turn
      entity Player
      entity Board
      entity Color
      entity Coordinate
      entity Configuration
      entity Piece
      entity Square

      Checkers *--> Configuration
      Checkers *--> Game
      Game *--> Turn
      Game *--> Player
      Game *--> Board

      Board *--> Square
      Board *--> Piece
      Piece --> Color
      Player --> Color
      Square --> Coordinate

    }

    package checkers.player.controllers{
      control LaunchController
      control LoadController
      control MoveController
      control UndoController
      control RedoController
      control ExitController
      control SaveGameController
      control RestartController
    }
  }
}

@enduml